# Mlops

./: main.py  pyproject.toml  requirements.txt
DataPrepration/: Data_prepration.py
Notebooks/: Data_Notebook.ipynb
finetunnig/: Bert_finetunning.py  Training.py
utils/: distributed_system_utils.py  util.py
