[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataset>=1.6.2",
    "ipykernel>=6.29.5",
    "nltk>=3.9.1",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "ray>=2.47.1",
    "transformers>=4.53.2",
]
